src/test/ui/consts/const-eval/const-eval-query-stack.stderr
warning: any use of this value will cause an error
  --> $DIR/const-eval-query-stack.rs:19:16
   |
LL | const X: i32 = 1 / 0;
   | ------------   ^^^^^ attempt to divide `1_i32` by zero
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-query-stack.rs:18:8
   |
LL | #[warn(const_err)]
   |        ^^^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/const-eval-query-stack.rs:23:28
   |
LL |     let x: &'static i32 = &X;
   |                            ^ referenced constant has errors

error: erroneous constant used
  --> $DIR/const-eval-query-stack.rs:23:27
   |
LL |     let x: &'static i32 = &X;
   |                           ^^ referenced constant has errors
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: `#[deny(const_err)]` on by default

query stack during panic:
#0 [mir_drops_elaborated_and_const_checked] elaborating drops for `main`
#1 [optimized_mir] optimizing MIR for `main`
#2 [collect_and_partition_mono_items] collect_and_partition_mono_items
end of query stack
Future incompatibility report: Future breakage diagnostic:
warning: any use of this value will cause an error
  --> $DIR/const-eval-query-stack.rs:19:16
   |
LL | const X: i32 = 1 / 0;
   | ------------   ^^^^^ attempt to divide `1_i32` by zero
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-query-stack.rs:18:8
   |
LL | #[warn(const_err)]
   |        ^^^^^^^^^

Future breakage diagnostic:
error: erroneous constant used
  --> $DIR/const-eval-query-stack.rs:23:27
   |
LL |     let x: &'static i32 = &X;
   |                           ^^ referenced constant has errors
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: `#[deny(const_err)]` on by default

